--- a/public/css/main.css
+++ b/public/css/main.css
@@ -2,13 +2,27 @@
     margin: 0%;
 }
 .menu{
+
+    display: flex;
     position: fixed;
-    width: 100%;
-    height: 100px;
-    background-color: #4616ca
-}
-.menu-form{
+    flex-direction: row;
+    justify-content: center;
     align-items: center;
+    width: 100%;
+    height: 80px;
+    padding: 10px;
+    background-color: #2F64ED;
+}
+.menu-item{
+    width: 60%;
+    height: 15px;
+    margin: 0px 10px auto;
+}
+.menu-item1{
+    margin: 0px 10px auto;
+}
+.menu-item2{
+    margin: 0px 10px auto;
 }
 .content{
     position: relative;
