--- a/public/css/main.css
+++ b/public/css/main.css
@@ -29,3 +29,13 @@
     float: left;
     margin-top: 100px;
 }
+.foot{
+    display: flex;
+    align-items: center;
+    border: 1px solid #000000;
+}
+.footerr{
+    align-content: center;
+    position: fixed;
+    
+}
