--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,8 +1,9 @@
-*{
+* {
     margin: 0%;
+    padding: 0%;
 }
-.menu{
 
+.menu {
     display: flex;
     position: fixed;
     flex-direction: row;
@@ -13,29 +14,34 @@
     padding: 10px;
     background-color: #2F64ED;
 }
-.menu-item{
+
+.menu-item {
     width: 60%;
     height: 15px;
     margin: 0px 10px auto;
 }
-.menu-item1{
+
+.menu-item1 {
     margin: 0px 10px auto;
 }
-.menu-item2{
+
+.menu-item2 {
     margin: 0px 10px auto;
 }
-.content{
+
+.content {
     position: relative;
     float: left;
     margin-top: 100px;
 }
-.foot{
+
+.foot {
     display: flex;
     align-items: center;
     border: 1px solid #000000;
 }
-.footerr{
-    align-content: center;
+
+.footerr {
+    box-align: center;
     position: fixed;
-    
 }
